# Soft64-Bryan

./: .gitignore  Authors.txt  BinBuilderScript.bat  ChangeLog.txt  Credits.txt  README.md  Tasks.txt  index.html  params.json
Design/: Drawing_DebuggingGUIMvc.vsdx
Docs/: BootloaderFlowchart.vsdx  MipsTables.xml  ViewModels.vsdx  cartBootDiasm.txt  mipsR4300OpcodeMap.txt  n64_tlb.txt
Docs/MyNotes/: N64MemoryMapping.txt
Source/: AssemblyInfoCommon.cs  DisassemblyView.xaml  Soft64.sln  Soft64Common.licenseheader  Soft64WPF.psess  TODO.txt  WPFPerformence.psess
Source/CompareEngine.Mupen/: AssemblyInfo.cpp  CompareEngine.Mupen.cpp  CompareEngine.Mupen.h  CompareEngine.Mupen.vcxproj  CompareEngine.Mupen.vcxproj.filters  MupenEngine.cpp  MupenEngine.h  MupenEngine.h.cpp  ReadMe.txt  Stdafx.cpp  cheat.c  compare_core.c  core_interface.c  main.c  osal_dynamiclib_win32.c  osal_files_win32.c  plugin.c
Source/Debug/: CompareEngine.Mupen.dll.metagen
Source/Soft64/: BitExtractor.cs  BootSnapReader.cs  BootStateSnapshots.xml  CICKeyType.cs  CPUProcessor.cs  Cartridge.cs  CartridgeInfo.cs  Debugger.cs  DiskDrive.cs  (+23 more)
Source/Soft64.Toolkits.WPF/: BlockType.cs  ByteToAsciiConverter.cs  HexCaret.cs  HexEditor.xaml  HexEditor.xaml.cs  HexEditorBlock.cs  HexEditorCaret.cs  HexEditorLabel.cs  HexEditorRow.cs  HexEditorRowViewModel.cs  HexEditorTextBlock.cs  IndexedByte.cs  InvertColorEffect.cs  InvertColorEffect.ps  ObservableCollection.cs  ObservableIndexByteCollection.cs  Soft64.Toolkits.WPF.csproj  StreamViewModel.cs
Source/TestUnits/: CMakeLists.txt  empty.c  simple_add.c
(+290 files in other folders)
